<?xml version="1.0" encoding="utf-8"?>
<resources>


    <string name="app_id_admob" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="banner_id_admob" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstial_id_admob" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="native_id_admob" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="open_ad_admob">ca-app-pub-3940256099942544/3419835294</string>
    <string name="reward_id_admob" translatable="false">/6499/example/rewarded</string>

    <string name="action_sort">Sort</string>

    <string name="all_image">All Images</string>
    <string name="app_name">VisualAi</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="brightness">Brightness</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="contrast">Contrast</string>
    <string name="copy">Copy</string>
    <string name="expand_button_title">Advanced</string>
    <string name="exposed_dropdown_menu_content_description">Show dropwdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="label_background">Background</string>
    <string name="label_background_full_screen">Full Screen</string>
    <string name="label_background_height">Padding Height</string>
    <string name="label_background_radius">Border Radius</string>
    <string name="label_background_width">Padding Width</string>
    <string name="label_text">Text</string>
    <string name="label_text_fonts">Text Font</string>
    <string name="label_text_shadow">Text Shadow</string>
    <string name="label_text_size">Text Size</string>

    <string name="not_set">Not set</string>
    <string name="preference_copied">\"%1$s\" copied to clipboard.</string>
    <string name="press_one_more_time">Press one more time to exit</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="s7">Test Ad</string>
    <string name="saturation">Saturation</string>
    <string name="save">SAVE</string>
    <string name="search_menu_title">Search</string>
    <string name="sharpen">Sharpen</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="summary_collapsed_preference_list">%1$s, %2$s</string>
    <string name="tap_to_select">Tap to select</string>
    <string name="temp">Temp</string>
    <string name="text_button_done">Done</string>
    <string name="text_images">%1$d Images</string>
    <string name="text_title_activity_album">Select photos</string>
    <string name="text_title_dialog_sort_by_album">Sort album by</string>
    <string name="text_title_dialog_sort_by_photo">Sort photo by</string>
    <string name="v7_preference_off">OFF</string>
    <string name="v7_preference_on">ON</string>
    <string name="vignette">Vignette</string>


    <string name="art_url">https://api.deepai.org/api/text2img</string>
    <string name="creatures_url">https://api.deepai.org/api/cute-creature-generator</string>
    <string name="fantasy_url">https://api.deepai.org/api/fantasy-world-generator</string>
    <string name="architecture_url">https://api.deepai.org/api/text2img</string>
    <string name="logo_url">https://api.deepai.org/api/text2img</string>
    <string name="cyber_url">https://api.deepai.org/api/cyberpunk-generator</string>
    <string name="anime_url">https://api.deepai.org/api/anime-portrait-generator</string>
    <string name="old_url">https://api.deepai.org/api/old-style-generator </string>
    <string name="painting_url">https://api.deepai.org/api/renaissance-painting-generator</string>
    <string name="abstract_url">https://api.deepai.org/api/abstract-painting-generator</string>
    <string name="impression_url">https://api.deepai.org/api/impressionism-painting-generator</string>
    <string name="surreal_url">https://api.deepai.org/api/surreal-graphics-generator</string>
    <string name="threeD_url">https://api.deepai.org/api/3d-objects-generator</string>
    <string name="origami_url">https://api.deepai.org/api/origami-3d-generator</string>
    <string name="hologram_url">https://api.deepai.org/api/hologram-3d-generator</string>
    <string name="watercolor_url">https://api.deepai.org/api/watercolor-painting-generator</string>


    <string name="by_continuing_you_agree_to_our_privacy_policy_amp_terms_of_use">By continuing, you agree to our <b>Privacy Policy</b> &amp; <b>Terms of Use</b></string>
    <string name="empower_creativity_through_pro_experience">Empower your creativity..</string>
</resources>
